# ragkit

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
examples/: RAGKit_Demo.ipynb  chat_with_pdf.py  quickstart.py
ragkit/: __init__.py  core.py  ragkit.py
ragkit/chains/: __init__.py  qa.py
ragkit/embeddings/: __init__.py  sentence_transformer.py
ragkit/llms/: __init__.py  huggingface.py
ragkit/loaders/: __init__.py  directory.py  markdown.py  pdf.py  text.py
ragkit/retrievers/: __init__.py  similarity.py
ragkit/splitters/: __init__.py  character.py  token.py
ragkit/vectorstores/: __init__.py  faiss_store.py  simple_store.py
tests/: __init__.py  test_basic.py
